Enhance .persona.md with development guidelines
Added detailed development values, workflow, and testing standards to the persona document.

--- a/.persona.md
+++ b/.persona.md
@@ -15,6 +15,57 @@ This system is **not** intended for production or commercial deployment. Stabili
 - **Reproducibility matters:** Every script, notebook, or service should run cleanly in a container or venv without complex setup.
 - **Fail visibly:** Errors should be logged, not silently ignored. It's okay if things break — debugging is part of learning.
 
+## Development Values (ordered)
+1. **Correctness over features**
+2. **Simplicity over cleverness**
+3. **Small steps over big rewrites**
+4. **Observability over assumptions**
+5. **Automation over memory**
+
+## Workflow (Incremental Loop)
+1. Pick the **smallest next change** that delivers value.
+2. **Write/adjust tests** that express the desired behavior.
+3. Implement the minimal code to make tests pass.
+4. **Refactor** to improve clarity without changing behavior.
+5. Commit with a message that states **intent + outcome**.
+
+---
+
+## Boundaries
+- No speculative abstractions.
+- Avoid cross-cutting “frameworks” until 3+ places need the pattern.
+- No synchronization across modules in one PR unless required.
+
+## Definition of Done (DoD)
+- Code is **covered by tests** (happy + edge + failure).
+- **Public interfaces** documented with examples.
+- **Logs and errors** are actionable (contain context).
+- Code passes lint/format/test locally.
+- If it’s a new module: a **usage snippet** is added to `README` or module docstring.
+
+## Testing Standard
+- Unit tests for every pure function and adapter.
+- Contract tests for external boundaries (API clients, DB access).
+- One negative case per positive case.
+- Flaky tests are treated as **bugs**.
+
+
+## Performance/Resilience Budgets
+- Unit work per function: < 100ms on dev machine.
+- External calls: retries with exponential backoff + max cap.
+- DB writes: batched; queries use indexed paths.
+
+## Architectural Posture
+- **Layered**: domain → adapters → infra.
+- **Explicit boundaries**: pass interfaces, not concrete types.
+- If no specific technology defined:
+ - **Replaceable infra**: DB/API adapters can be stubbed/mocked.
+
+## Communication Style (for humans and AI assistants)
+- Prefer clear, short explanations and examples.
+- If uncertain, propose a **spike** with throwaway code, then stabilize.
+- Avoid smart one-liners; choose readable sequences.
+
 ---
 
 ## AI Assistant Persona
@@ -37,6 +88,11 @@ When generating or reviewing code, the AI assistant should:
 - Test critical components (data ingestion, DB schema) with Jest or similar lightweight tools.
 
 ---
+
+
+## Security
+- Secrets from environment; never commit keys.
+- Privacy protection; never commit private personal indicators; never commit sensitive data.
 
 ## Data Ethics
 - Only use **publicly available, free-tier APIs**.
@@ -67,3 +123,11 @@ When generating or reviewing code, the AI assistant should:
 A self-hosted personal analytics lab for market data.  
 It should feel like an **open, inspectable Bloomberg for one person** — not a product, but a playground for experimentation and discovery.
 
+
+## AI Assistant Behavior
+Always generate corresponding unit tests whenever:
+- Creating a new function, class, or API endpoint.
+- Modifying existing logic.
+- Introducing new schemas or data models.
+
+Testing is mandatory — not optional.
